# repo-parser

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  netlify.toml  process.py  pyproject.toml
.github/workflows/: publish-to-pypi.yml  python-package.yml
example/: example_parser.py
example/docs/: README.md  conf.py  index.md  index.rst
example/docs/services/: index.md.in
example/golang/go-service/: README.md
example/python/: README.md
example/python/docs/: best_practices.md
example/repo/: README.md
example/repo/docs/: conf.py  index.md
example/repo/docs/_static/: services.csv.in
example/repo/docs/languages/: index.md.in
example/repo/docs/libraries/: index.md.in
example/repo/docs/services/: index.md.in
example/repo/golang/: README.md
example/repo/golang/docs/: best_practices.md  ide_configuration.md
example/repo/golang/go-lib/: README.md
example/repo/python/: README.md
example/repo/python/python-lib/: README.md
example/repo/python/python-service/: README.md
idrs/: 202512301631-idrs.md  202512310128-commented-sections-in-idrs.md  202512310404-publish-to-pypi-from-github-actions.md  202601020031-get-last-modified-in-bulk.md  202601030409-duckdb-serialization-and-interactive-ui-architecture.md  202604041330-remove-direct-idr-support.md
repo_parser/: __init__.py  cli.py  filesystem.py  outputs.py  processor.py  resource.py
repo_parser/templates/: idr.md
requirements/: base.in  base.txt  dev.in  dev.txt  preview.in  preview.txt  test.in  test.txt
tests/: conftest.py  test_cli.py  test_filesystem.py  test_outputs.py  test_resources.py
