[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "repo-parser"
authors = [{ name = "William Lachance", email = "wlach@protonmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["GitPython"]
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "jinja2",
    "livereload",
    "myst-parser",
    "sphinx",
    "sphinx_rtd_theme",
    "pytest",
    "pytest-unordered",
    "python-frontmatter",
    "ruff",
    "typer",
]


[project.urls]
Home = "https://github.com/wlach/repo-parser"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]
