[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "repo-parser"
authors = [{ name = "William Lachance", email = "wlach@protonmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["duckdb>=1.4.3", "GitPython", "jinja2", "typer"]
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "livereload",
    "myst-parser",
    "sphinx",
    "sphinx_rtd_theme",
    "pytest",
    "pytest-unordered",
    "python-frontmatter",
    "ruff",
    "ty>=0.0.8",
    "idr-tools>=0.2.1",
]


[project.urls]
Home = "https://github.com/wlach/repo-parser"

[tool.ruff.lint]
select = [
    "E4",  # pycodestyle errors (subset)
    "E7",  # pycodestyle errors (subset)
    "E9",  # pycodestyle errors (subset)
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "TRY", # tryceratops (exception handling)
    "UP",  # pyupgrade (modern Python syntax)
    "RUF", # Ruff-specific rules
    "C4",  # flake8-comprehensions
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "ARG", # flake8-unused-arguments
]
